Add document and section directives to display latest ccda document.
#7587 - Create the UI interface used to display the Patient Health Information from HIE

--- a/client/app/healthinformation/tmpl/document.tpl.html
+++ b/client/app/healthinformation/tmpl/document.tpl.html
@@ -14,15 +14,15 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p>
-                            <label for="patientName">Patient Name:</label> <span
-                                ng-bind="document.patient.name" id="patientName"></span>
+                            <label for="patientName">Patient Name:</label>
+                            <span ng-bind="document.patient.name" id="patientName"></span>
                         </p>
                         <p>
                             <label for="patientId">id: </label> <span ng-bind="document.patient.id" id="patientId"></span>
                         </p>
                         <p>
-                            <label for="patientGender">Gender: </label> <span
-                                ng-bind="document.patient.gender" id="patientGender"></span>
+                            <label for="patientGender">Gender: </label>
+                            <span ng-bind="document.patient.gender" id="patientGender"></span>
                         </p>
                         <p>
                             <label for="patientDOB">Birthdate: </label> <span ng-bind="document.patient.dob" id="patientDOB"></span>
