--- a/client/app/healthinformation/tmpl/healthinformation.tpl.html
+++ b/client/app/healthinformation/tmpl/healthinformation.tpl.html
@@ -35,64 +35,7 @@
 <!-- NEW HEALTH INFO -->
 
         <!-- PATIENT DEMOGRAPHICS-->
-        <document-accordion document="HealthInformationVm.document" ></document-accordion>
-        <div class="row">
-            <div class="col-sm-12 relative" id="demographics">
-                <div class="ibox panel panel-darkblue float-e-margins">
-                    <div class="ibox-title  modified panel-heading right-padding30">
-                        <div class="row">
-                            <div class="col-sm-12 m-t-xs">
-                                <h3>Inpatient Summary<span class="m-b-none m-l-sm">Created on August 6, 2015 at Local Hospital</span></h3>
-                            </div>
+        <!--<document-accordion document="HealthInformationVm.document" ></document-accordion>-->
 
-                        <div class="chevron_absolute">
-                            <div ibox-tools class="white"  total=""></div>
-                        </div>
-                        </div>
-                    </div>
-                    <div class="ibox-content modified">
-                        <div class="row m-b">
-                            <div class="col-sm-6">
-                                <div>
-                                    <label for="patientName">Provider:</label> <span id="patientName">Dr. Henry Seven</span>
-                                </div>
-                                <div>
-                                    <label for="patientSSN">Treatment: </label> <span id="patientSSN">Pneumonia</span>
-                                </div>
-                                <div>
-                                    <label for="startDate">Treatment Start Date: </label> <span id="startDate">2015-10-15</span>
-                                </div>
-                                <div>
-                                    <label for="endDate">Treatment Start Date: </label> <span id="endDate">2015-10-20</span>
-                                </div>
-
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="ibox panel panel-default float-e-margins">
-                                    <div class="ibox-title modified panel-heading">
-                                        <h5>Hospital Discharge Instructions
-                                            <small class="m-l-sm">Additional Information</small>
-                                        </h5>
-                                        <div ibox-tools></div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <p>
-                                            <strong>Lorem ipsum dolor</strong>
-                                            Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-                                            eu, pretium quis, sem. Nulla consequat massa quis enim.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-<!-- END NEW HEALTH INFO -->
-
+        <pp-ccda-document document="HealthInformationVm.document" ></pp-ccda-document>
 </div>
