Correct bootlint code errors in html.
#7498 Create UI Interface used to display Patient Health Information

--- a/client/app/medicalDocuments/tmpl/medicalDocumentsInfo.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsInfo.tpl.html
@@ -20,7 +20,7 @@
                         Upload Medical Documents
                     </a>
                 </p>
-                <p>
+                <p class="m-t">
                     If you do not have an existing electronic Medical Record, you may manually enter your medical information here.
                 </p>
                 <p>
