--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -29,7 +29,7 @@
             </li>
 
             <li ng-class="{active: $state.includes('fe.consent')}" >
-                <a ui-sref="fe.consent.list"><i class="fa fa-user-md"></i> <span class="nav-label">Consents</span></a>
+                <a ui-sref="fe.consent.list"><i class="fa fa-file-text"></i> <span class="nav-label">Consents</span></a>
             </li>
 
             <li ng-class="{active: $state.includes('fe.provider')}" >
