Move the trustAsHTML fitler in the core module. Refactor the app module, putting config an consent in a seperate file.
#7178 - Implement create consent UI

--- a/client/index.html
+++ b/client/index.html
@@ -102,6 +102,7 @@
 <script src="app/core/services/services.js" type="text/javascript"></script>
 <script src="app/core/services/notification.service.js" type="text/javascript"></script>
 <script src="app/core/filters/zip.filter.js" type="text/javascript"></script>
+<script src="app/core/filters/trustAsHTML.filter.js" type="text/javascript"></script>
 <script src="app/core/filters/phone.filter.js" type="text/javascript"></script>
 <script src="app/core/filters/hasString.filter.js" type="text/javascript"></script>
 <script src="app/core/directives/ppIcheck.directive.js" type="text/javascript"></script>
