Implement file extension regex validator for Upload Medical Documents
#7498 - Implement consent 2 share upload feature into patient portal (UI and Backend)

--- a/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
@@ -37,7 +37,7 @@
                 <div class="form-group">
                     <label for="file">Medical Document</label>
                     <input type="file" name="file" id="file" accept=".xml" file-validate
-                           ng-model="MedicalDocumentsUploadVm.file" file-model="MedicalDocumentsUploadVm.medicalFile"  ng-pattern="/\.xml$/" required/>
+                           ng-model="MedicalDocumentsUploadVm.file" file-model="MedicalDocumentsUploadVm.medicalFile"  ng-pattern="MedicalDocumentsUploadVm.extension" required/>
                     <div ng-messages="medicalDocumentUploadForm.file.$error"
                          class="text-alert" role="alert">
                         <div class="m-t-xs" ng-message="pattern" >File extension must be XML.</div>
