--- a/client/index.html
+++ b/client/index.html
@@ -83,7 +83,7 @@
 <script src="app/security/services/authenticationInterceptor.service.js" type="text/javascript"></script>
 <script src="app/security/services/authentication.service.js" type="text/javascript"></script>
 <script src="app/security/security.config.js" type="text/javascript"></script>
-<script src="app/security/Login.controller.js" type="text/javascript"></script>
+<script src="app/security/login.controller.js" type="text/javascript"></script>
 <script src="app/provider/services/providerServices.js" type="text/javascript"></script>
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
