--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-        <p>Authorized to share: <strong><span ng-bind="consenRevokeVm.params.consent.toDiscloseName"/></strong> |
+        <p>Authorized to share: <strong><span ng-bind="consentRevokeVm.params.consent.toDiscloseName"/></strong> |
             Sharing with: <strong><span
-                    ng-bind="consenRevokeVm.params.consent.isMadeToName"/></strong> | Effective Date: <strong><span
-                    ng-bind="consenRevokeVm.params.consent.consentStart | date"/></strong></p>
+                    ng-bind="consentRevokeVm.params.consent.isMadeToName"/></strong> | Effective Date: <strong><span
+                    ng-bind="consentRevokeVm.params.consent.consentStart | date"/></strong></p>
     </div>
 </div>
 <div class="row">
@@ -44,7 +44,7 @@
 </div>
 <div class="row m-b-md">
     <div class="col-sm-10 col-sm-offset-1">
-        <button type="button" class="btn btn-white m-r" ng-click="consenRevokeVm.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary" ng-click="consenRevokeVm.sign()">Sign</button>
+        <button type="button" class="btn btn-white m-r" ng-click="consentRevokeVm.cancel()">Cancel</button>
+        <button type="button" class="btn btn-primary" ng-click="consentRevokeVm.sign()">Sign</button>
     </div>
 </div>
