Change the path of the template content.html in the medical information controller.
#7178 - Implement create consent UI

--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,9 @@
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
 <script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
+<script src="app/medicalDocuments/services/medicalDocuments.services.js" type="text/javascript"></script>
+<script src="app/medicalDocuments/directives/ppMedicalDocuments.directives.js" type="text/javascript"></script>
+<script src="app/medicalDocuments/controllers/medicalDocuments.controller.js" type="text/javascript"></script>
 <script src="app/layout/layout.module.js" type="text/javascript"></script>
 <script src="app/layout/directives/ppSideNavigation.directive.js" type="text/javascript"></script>
 <script src="app/layout/directives/ppPageTitle.directive.js" type="text/javascript"></script>
