Fixed the issue in compiling the root index.html to include all the JS for the application.
#7178 - Implement create consent UI

--- a/client/index.html
+++ b/client/index.html
@@ -78,57 +78,9 @@
     <script type="text/javascript" src="<%= file %>"></script>
     <% }); %>
 
+    <!--Donot delete this comment-->
     <!-- angular -->
-<script src="app/security/security.module.js" type="text/javascript"></script>
-<script src="app/security/services/authenticationInterceptor.service.js" type="text/javascript"></script>
-<script src="app/security/services/authentication.service.js" type="text/javascript"></script>
-<script src="app/security/security.config.js" type="text/javascript"></script>
-<script src="app/security/login.controller.js" type="text/javascript"></script>
-<script src="app/provider/services/providerServices.js" type="text/javascript"></script>
-<script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
-<script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
-<script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
-<script src="app/medicalDocuments/services/medicalDocuments.services.js" type="text/javascript"></script>
-<script src="app/medicalDocuments/directives/ppMedicalDocuments.directives.js" type="text/javascript"></script>
-<script src="app/medicalDocuments/controllers/medicalDocuments.controller.js" type="text/javascript"></script>
-<script src="app/layout/layout.module.js" type="text/javascript"></script>
-<script src="app/layout/directives/ppSideNavigation.directive.js" type="text/javascript"></script>
-<script src="app/layout/directives/ppPageTitle.directive.js" type="text/javascript"></script>
-<script src="app/layout/directives/ppMinimalizaSidebar.directive.js" type="text/javascript"></script>
-<script src="app/layout/directives/ppIboxTools.directive.js" type="text/javascript"></script>
-<script src="app/home/home.module.js" type="text/javascript"></script>
-<script src="app/home/home.config.js" type="text/javascript"></script>
-<script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
-<script src="app/healthinformation/directives/healthInformationDirectives.js" type="text/javascript"></script>
-<script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
-<script src="app/core/core.module.js" type="text/javascript"></script>
-<script src="app/core/services/services.js" type="text/javascript"></script>
-<script src="app/core/services/notification.service.js" type="text/javascript"></script>
-<script src="app/core/filters/zip.filter.js" type="text/javascript"></script>
-<script src="app/core/filters/trustAsHTML.filter.js" type="text/javascript"></script>
-<script src="app/core/filters/phone.filter.js" type="text/javascript"></script>
-<script src="app/core/filters/hasString.filter.js" type="text/javascript"></script>
-<script src="app/core/directives/ppIcheck.directive.js" type="text/javascript"></script>
-<script src="app/core/directives/ppDatepickerRange.directives.js" type="text/javascript"></script>
-<script src="app/core/directives/ppContentWrapper.directive.js" type="text/javascript"></script>
-<script src="app/consent/consent.module.js" type="text/javascript"></script>
-<script src="app/consent/services/consent.service.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentRevoke.directive.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentPurposeOfUse.directive.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentProviderSelect.directive.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentMedicalInformation.directive.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentCreate.directive.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentCardList.directive.js" type="text/javascript"></script>
-<script src="app/consent/directives/ppConsentCard.directive.js" type="text/javascript"></script>
-<script src="app/consent/controllers/consentSignRevoke.controller.js" type="text/javascript"></script>
-<script src="app/consent/controllers/consentSign.controller.js" type="text/javascript"></script>
-<script src="app/consent/controllers/consentList.controller.js" type="text/javascript"></script>
-<script src="app/consent/controllers/consentCreateEdit.controller.js" type="text/javascript"></script>
-<script src="app/consent/consent.config.js" type="text/javascript"></script>
-<script src="app/config/config.js" type="text/javascript"></script>
-<script src="app/app.js" type="text/javascript"></script>
-<!-- endangular -->
+    <!-- endangular -->
 
 </body>
 </html>
