--- a/client/app/medicalDocuments/tmpl/medicalDocuments.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocuments.tpl.html
@@ -1,6 +1,6 @@
-<content-wrapper title="Upload Medical Documents">
+<pp-content-wrapper title="Upload Medical Documents">
     <div class="row">
         <pp-medical-documents-upload></pp-medical-documents-upload>
         <pp-uploaded-documents medicaldocumentslist="MedicalDocumentsListVm.medicalDocumentsList"></pp-uploaded-documents>
     </div>
-</content-wrapper>
+</pp-content-wrapper>
