--- a/client/app/medicalDocuments/tmpl/medicalDocumentsInfo.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsInfo.tpl.html
@@ -1,4 +1,4 @@
-<content-wrapper title="Manage My Medical Information">
+<pp-content-wrapper title="Manage My Medical Information">
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
@@ -31,4 +31,4 @@
             </div>
         </div>
     </div>
-</content-wrapper>
+</pp-content-wrapper>
