--- a/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
@@ -40,7 +40,8 @@
                            ng-model="MedicalDocumentsUploadVm.file" file-model="MedicalDocumentsUploadVm.medicalFile"  ng-pattern="MedicalDocumentsUploadVm.extension" required/>
                     <div ng-messages="medicalDocumentUploadForm.file.$error"
                          class="text-alert" role="alert">
-                        <div class="m-t-xs" ng-message="pattern" >File extension must be XML.</div>
+                        <div class="m-t-xs" ng-message="pattern" >Only .xml files are permitted.</div>
+                        <div class="m-t-xs" ng-if="medicalDocumentUploadForm.file.$error.sizeLimit" >The file you tried to upload is over the 10MB limit.</div>
                     </div>
                 </div>
 
