--- a/client/app/home/home.tpl.html
+++ b/client/app/home/home.tpl.html
@@ -18,11 +18,11 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="ibox float-e-margins margin-bottom-10">
-                <strong>To view your Health Information, please click the button. </strong>
-                <br> <br>
+
+                <br>
                 <p>
                     <a class="btn btn-primary dark-green" ui-sref="fe.patient.healthinformation({scrollTo:'none',expand:'none' })" ng-click="AppVm.showHealthInformationMenu()">
-                        <span class="hidden-xs">View </span>Health Information
+                        <span class="hidden-xs">My </span>Health Information
                     </a>
                 </p>
             </div>
