--- a/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocumentsUpload.tpl.html
@@ -6,7 +6,7 @@
             </div>
             <div class="panel-body">
                 <div class="alert alert-info">
-                    Please enter the Document <b>Name</b> and select a <b>File</b> to upload.
+                    <b>Name</b> and <b>Medical Document</b> fields are required.
                 </div>
                 <div class="form-group">
                     <label for="name">Name</label>
