--- a/client/app/healthinformation/tmpl/ccdaDocumentSection.tpl.html
+++ b/client/app/healthinformation/tmpl/ccdaDocumentSection.tpl.html
@@ -5,7 +5,7 @@
                 <h5>
                     <span ng-bind="ccdaDocumentSectionVm.section.title"></span>
                 </h5>
-                <div ibox-tools></div>
+                <div pp-ibox-tools></div>
             </div>
             <div class="ibox-content">
                 <p>
