--- a/client/app/healthinformation/tmpl/document.tpl.html
+++ b/client/app/healthinformation/tmpl/document.tpl.html
@@ -8,7 +8,7 @@
                     <span
                          ng-bind="document.date" id="date"></span>
                 </h2>
-                <div ibox-tools   total=""></div>
+                <div pp-ibox-tools   total=""></div>
             </div>
             <div class="ibox-content modified">
                 <div class="row">
