--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12 relative">
-        <div class="ibox panel panel-success float-e-margins" ng-class="{'statusIcon_saved': consentCardVm.consentState() === 'saved','statusIcon_signed': consentCardVm.consentState() === 'signed','statusIcon_revoked': consentCardVm.consentState() === 'revoked'}">
+        <div class="ibox panel panel-success float-e-margins" ng-class="{'statusIcon_saved': consentCardVm.consentState('Saved'),'statusIcon_signed': consentCardVm.consentState('Signed'),'statusIcon_revoked': consentCardVm.consentState('Revoked')}">
             <div class="ibox-title navy-blue left-padding55 right-padding30" ng-click="consentCardVm.toggleCollapse()">
                 <div class="chevron_absolute">
                     <div pp-ibox-tools pp-collapsed="consentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
