--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -37,7 +37,7 @@
             <div class="ibox-content modified">
                 <div class="btn-grey pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
                     <span>
-                        Consent State: <span class="bold" ng-bind="consentCardVm.consentState() | uppercase"/>
+                        Consent State: <span class="bold" ng-bind="consentCardVm.consentState('') | uppercase"/>
                     </span>
                 </div>
 
