--- a/client/app/medicalDocuments/controllers/medicalDocument.html
+++ b/client/app/medicalDocuments/controllers/medicalDocument.html
@@ -1,6 +1,6 @@
 <pp-content-wrapper title="Upload Medical Documents">
     <div class="row">
         <pp-medical-documents-upload></pp-medical-documents-upload>
-        <pp-uploaded-documents medicaldocumentslist="MedicalDocumentsListVm.medicalDocumentsList"></pp-uploaded-documents>
+        <pp-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></pp-uploaded-documents>
     </div>
 </pp-content-wrapper>
