Use the controllerAs syntax instead of controller with $scope syntax in ppMedicalDocumentsUploaded directive

--- a/client/app/medicalDocuments/directives/medicalDocumentDeleteModal.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentDeleteModal.html
@@ -3,10 +3,10 @@
         <h4 class="modal-title">Delete Medical Document</h4>
     </div>
     <div class="modal-body">
-        <p>Are you sure you want to delete <span ng-bind="medicalDocument.name"></span> document?</p>
+        <p>Are you sure you want to delete <span ng-bind="medicalDocumentModalDeleteVm.medicalDocument.name"></span> document?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-white" ng-click="cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary dark-green" ng-click="ok()">Delete</button>
+        <button type="button" class="btn btn-white" ng-click="medicalDocumentModalDeleteVm.cancel()">Cancel</button>
+        <button type="button" class="btn btn-primary dark-green" ng-click="medicalDocumentModalDeleteVm.delete()">Delete</button>
     </div>
 </div>
